--- a/assets/css/pages/Home.css
+++ b/assets/css/pages/Home.css
@@ -12,7 +12,7 @@
         padding-block: 3vh;
     }
 
-     >.txt {
+     >.home-contect {
          width: 100%;
          margin-block-end: 3vh;
          text-align: start;
