--- a/assets/css/apps/book/cmps/BookPreview.css
+++ b/assets/css/apps/book/cmps/BookPreview.css
@@ -1,3 +1,7 @@
+.container {
+  padding-left: 0px;
+}
+
 .book-preview {
   text-align: center;
   padding: 0.3em;
@@ -12,8 +16,8 @@
 }
 
 .book-preview img {
-  width: 200px;
-  height: 300px;
+  width: 150px;
+  height: 225px;
   object-fit: cover;
   border-radius: 8px;
 }
