--- a/assets/css/apps/book/cmps/AddReview.css
+++ b/assets/css/apps/book/cmps/AddReview.css
@@ -1,13 +1,14 @@
 .add-review {
-  background-color: var(--clr-primary-2);
-
   position: absolute;
   top: 50%;
   left: 50%;
   translate: -50% -50%;
 
-  padding: 1rem;
-  width: 40vw;
+  margin-top: 2rem;
+  padding: 6rem;
+  border-radius: 20px;
+
+  background-color: var(--book-bg);
 }
 
 .review-form {
@@ -15,10 +16,10 @@
   justify-items: center;
   gap: 1rem;
 
-  font-size: 2rem;
+  font-size: 1rem;
 
   > input {
-    font-size: 1.5rem;
+    font-size: 1rem;
   }
 }
 
