--- a/assets/css/apps/book/cmps/BookFilter.css
+++ b/assets/css/apps/book/cmps/BookFilter.css
@@ -10,9 +10,20 @@
 
 .book-filter form {
   display: grid;
-  grid-template-columns: repeat(2, minmax(130px, 180px));
-  gap: 0.5em;
+  gap: 0.5rem;
   justify-content: center;
+
+  input {
+    width: 35vw;
+    max-width: 600px;
+    border-radius: 10px;
+    padding: 0.7rem;
+
+    font-size: 1.2rem;
+    border: none;
+    outline: none;
+    background-color: var(--clr-note-bg-2);
+  }
 }
 
 .book-filter form label {
