Add record note

--- a/assets/css/apps/note/cmps/AddNote.css
+++ b/assets/css/apps/note/cmps/AddNote.css
@@ -84,3 +84,17 @@
     text-align: start;
   }
 }
+
+.record-btn {
+  position: absolute;
+  right: 20px;
+  bottom: 20px;
+
+  background-color: var(--clr-note-bg-1);
+  border: none;
+
+  &:hover {
+    background-color: var(--clr-note-bg-2);
+    box-shadow: 0 0 0 10px var(--clr-note-bg-2);
+  }
+}
