--- a/assets/css/cmps/app-links.css
+++ b/assets/css/cmps/app-links.css
@@ -1,29 +1,24 @@
 .app-links {
-    justify-content: space-between;
     margin-block-end: 3vh;
 
     >.link {
-        width: 15vw;
-        height: fit-content;
+        text-align: center;
+        ;
 
         .link-img {
-            text-align: center;
-            padding-block: 3vh;
-            margin-block-end: .5rem;
-
             box-shadow: 0px 0px 5px 0px #d2d2d2;
             border-radius: 1rem;
             cursor: pointer;
 
             >img {
-                width: 40%;
+                width: 70%;
             }
         }
 
         h3 {
             text-transform: uppercase;
             cursor: pointer;
-            font-size: 1.25rem;
+            font-size: 1.5rem;
         }
     }
 
