--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -35,6 +35,7 @@
 @import './apps/mail/cmps/MailCompose.css';
 @import './apps/mail/cmps/MailFilter.css';
 @import './apps/mail/cmps/SideNav.css';
+@import './apps/mail/cmps/MailDetails.css';
 
 /* Book */
 @import './apps/book/cmps/AddReview.css';
@@ -48,5 +49,6 @@
 @import './apps/book/pages/BookIndex.css';
 
 /* MQ */
+@import './setup/mq-home.css';
 @import './setup/mqNote.css';
 @import './setup/mq.css';
