--- a/assets/css/basics/layout.css
+++ b/assets/css/basics/layout.css
@@ -2,7 +2,7 @@
   width: 100%;
 
   display: grid;
-  grid-template-columns: minmax(0, 320px) 4fr;
+  grid-template-columns: 220px 4fr;
   grid-template-rows: 10vh 90vh;
 
   body.note-menu-open & {
