--- a/assets/css/pages/Home.css
+++ b/assets/css/pages/Home.css
@@ -4,6 +4,8 @@
   grid-template-columns: minmax(10px, 1fr) 1000px minmax(10px, 1fr);
   place-content: center;
 
+  margin-bottom: 100px;
+
   > * {
     grid-column: 2;
   }
