--- a/assets/css/apps/mail/cmps/MailPreview.css
+++ b/assets/css/apps/mail/cmps/MailPreview.css
@@ -1,6 +1,5 @@
 .mail-preview {
     position: relative;
-    height: 40px;
 
     padding-inline: 1rem;
     box-shadow: 0px -1px 0px var(--mail-bg-clr1);
@@ -18,7 +17,7 @@
     }
 
     section {
-        gap: 1.2rem;
+        gap: .5rem;
     }
 
     div {
@@ -54,8 +53,7 @@
 
 .content {
     position: absolute;
-    width: 63vw;
-    left: 250px;
+    /* left: 250px; */
     white-space: nowrap;
     overflow: hidden;
     text-overflow: ellipsis;
