--- a/assets/css/pages/Home.css
+++ b/assets/css/pages/Home.css
@@ -1,20 +1,13 @@
-/* home */
 .home {
-  display: grid;
-  grid-template-columns: minmax(10px, 1fr) 1000px minmax(10px, 1fr);
   place-content: center;
 
   margin-bottom: 100px;
-
-  > * {
-    grid-column: 2;
-  }
 
   > img {
     padding-block: 3vh;
   }
 
-  > .home-contect {
+  > .home-content {
     width: 100%;
     margin-block-end: 3vh;
     text-align: start;
