--- a/assets/css/setup/mqNote.css
+++ b/assets/css/setup/mqNote.css
@@ -33,128 +33,140 @@
     column-count: 2;
     max-width: 90vw;
   }
+}
 
-  @media (max-width: 950px) {
-    .note-side-bar {
-      position: absolute;
-      z-index: 2;
+@media (max-width: 950px) {
+  .note-side-bar {
+    position: absolute;
+    z-index: 2;
 
-      width: 30vw;
-      min-width: 200px;
-      height: 100%;
+    width: 30vw;
+    min-width: 200px;
+    height: 100%;
 
-      box-shadow: rgba(0, 0, 0, 0.15) 1.95px 1.95px 2.6px;
-      /* background-color: var(--clr-note-bg-1); */
+    box-shadow: rgba(0, 0, 0, 0.15) 1.95px 1.95px 2.6px;
+    /* background-color: var(--clr-note-bg-1); */
 
-      body.note-menu-open & {
-        display: none;
-      }
-    }
-
-    .note-black-screen-for-menu {
-      background-color: rgba(0, 0, 0, 0.409);
-
-      width: 100vw;
-      height: 100vh;
-
-      position: fixed;
-      top: 0;
-      z-index: 1;
-
-      body.note-menu-open & {
-        display: none;
-      }
-    }
-
-    .note-list {
-      grid-column: span 2;
-      grid-row: 1;
-    }
-
-    .notes-container {
-      padding-inline: 0;
-    }
-
-    .open-note {
-      width: 80vw;
+    body.note-menu-open & {
+      display: none;
     }
   }
 
-  @media (max-width: 800px) {
-    .note-filter {
-      > form {
-        width: 50vw;
-      }
+  .note-black-screen-for-menu {
+    background-color: rgba(0, 0, 0, 0.409);
+
+    width: 100vw;
+    height: 100vh;
+
+    position: fixed;
+    top: 0;
+    z-index: 1;
+
+    body.note-menu-open & {
+      display: none;
     }
+  }
 
-    .add-note {
-      form {
-        .half-note-input {
-          width: 60vw;
+  .note-main-layout {
+    grid-template-columns: 1fr;
+    grid-template-rows: 1fr;
 
-          > input {
-            width: 30vw;
-          }
+    body.note-menu-open & {
+      grid-template-columns: 1fr;
+    }
+  }
+
+  .note-list {
+    grid-column: 1;
+    grid-row: 1;
+  }
+
+  .notes-container {
+    padding-inline: 0;
+  }
+
+  .open-note {
+    width: 80vw;
+  }
+}
+
+@media (max-width: 800px) {
+  .note-filter {
+    > form {
+      width: 50vw;
+    }
+  }
+
+  .add-note {
+    form {
+      .half-note-input {
+        width: 60vw;
+
+        > input {
+          width: 30vw;
         }
       }
     }
   }
+}
 
-  @media (max-width: 550px) {
-    .note-list {
-      padding: 0.5rem;
+@media (max-width: 550px) {
+  .note-list {
+    padding: 0.5rem;
 
-      .note-list-header {
-        padding: 0rem;
-      }
+    .note-list-header {
+      padding: 0rem;
     }
+  }
 
-    .note-filter {
-      > form {
-        width: 90vw;
-
-        .note-txt-filter {
-          width: 100%;
-          padding: 0.7rem;
-        }
-      }
-    }
-
-    .add-note {
-      form {
-        .half-note-input {
-          width: 100%;
-
-          > input {
-            width: 100%;
-          }
-        }
-      }
-    }
-
-    .full-note-input {
-      width: 90%;
-    }
-
-    .open-note {
+  .note-filter {
+    > form {
       width: 90vw;
-    }
-  }
 
-  @media (max-width: 350px) {
-    .notes-container {
-      justify-self: center;
-
-      padding: 0.5rem;
-
-      /* column-count: 5; */
-      column-gap: 0.5rem;
-
-      .note {
+      .note-txt-filter {
         width: 100%;
-        padding: 0.5rem;
-        margin-bottom: 0.5rem;
+        padding: 0.7rem;
       }
     }
   }
+
+  .add-note {
+    form {
+      .half-note-input {
+        width: 100%;
+
+        > input {
+          width: 100%;
+        }
+      }
+    }
+  }
+
+  .full-note-input {
+    width: 90%;
+  }
+
+  .open-note {
+    width: 90vw;
+  }
+}
+
+@media (max-width: 350px) {
+  .notes-container {
+    justify-self: center;
+
+    min-width: 100vw;
+    padding: 0.5rem;
+
+    column-gap: 0.5rem;
+
+    .note {
+      width: 100%;
+      padding: 0.5rem;
+      margin-bottom: 0.5rem;
+    }
+  }
+}
+
+@media (max-width: 300px) {
 }
